--- a/demo_project/demo_app/templates/HtmlAtributoItem/atributos_por_item.html
+++ b/demo_project/demo_app/templates/HtmlAtributoItem/atributos_por_item.html
@@ -17,6 +17,23 @@
 
 
 </table>
+
+  <table>
+   <td style="width: 70%;margin-right: 0px; margin-left: 100%; ">
+        {{ lines|pagination }}
+   </td>
+   <td>
+       <form id='formulario' method='post' action=''>{% csrf_token %}
+	     <table>
+              <td><input type="text" placeholder="Nombre del Item" name="buscar" width="200px"></td>
+              <td style="width: 20px"></td>
+
+	          <td><input class="btn btn-info btn-lrg" type='submit' value='Buscar'/></td>
+         </table>
+       </form>
+   </td>
+  </table>
+
  <table class="table table-bordered table-condensed" >
     <tr>
         <th class="navbar-inner">Tipo</th>
