--- a/demo_project/demo_app/templates/HtmlAtributoItem/atributoitem.html
+++ b/demo_project/demo_app/templates/HtmlAtributoItem/atributoitem.html
@@ -11,10 +11,19 @@
 {% block content %}
 <br>
    <table>
-   <td style="width: 70%;margin-right: 0px; margin-left: 100%; ">
+    <td style="width: 70%;margin-right: 0px; margin-left: 100%; ">
         {{ lines|pagination }}
-   </td>
+    </td>
+    <td>
+       <form id='formulario' method='post' action=''>{% csrf_token %}
+	     <table>
+              <td><input type="text" placeholder="Nombre del Item" name="buscar" width="200px"></td>
+              <td style="width: 20px"></td>
 
+	          <td><input class="btn btn-info btn-lrg" type='submit' value='Buscar'/></td>
+         </table>
+       </form>
+   </td>
 
    </table>
 
