--- a/demo_project/demo_app/templates/base.html
+++ b/demo_project/demo_app/templates/base.html
@@ -26,30 +26,44 @@
 
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
+
         <div class="container">
             <a class="brand" href="/">PROJECT X</a>
+            {% if user.is_authenticated %}
             <ul class="nav">
-
+            {% if user.is_active and  user.is_staff or user.is_active and user.is_superuser %}
                  <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administracion<b class="caret"></b></a>
                     <ul class="dropdown-menu">
+                    {% if user.is_superuser %}
                         <li><a href="{% url 'demo_app.AdminUsuarios.views.nuevo_usuario' %}">Agregar Usuario</a></li>
                         <li><a href="{% url 'demo_app.AdminUsuarios.views.usuarios' %}">Listar Usuarios</a></li>
+                      {% endif %}
+                        {% if user.is_staff %}
                          <li><a href="{% url 'demo_app.AdminProyectos.views.nuevo_proyecto' %}">Agregar Proyecto</a></li>
-                        <li><a href="{% url 'demo_app.AdminProyectos.views.proyectos' %}">Listar Proyecto</a></li>
+                        {% endif %}
+                    {% if user.is_superuser %}
+                        <li><a href="{% url 'demo_app.AdminProyectos.views.proyectos' %}">Listar Proyectos</a></li>
+                    {% endif %}
 
                     </ul>
                 </li>
+            {% endif %}
+
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Desarrollo<b class="caret"></b></a>
                     <ul class="dropdown-menu">
+
                         <li><a href="{% url 'demo_app.AdminProyectos.views.mis_proyectos' %}">Mis Proyectos</a></li>
 
+                      {% if user.is_superuser or user.is_staff %}
                         <li><a href="{% url 'demo_app.AdminTipoItem.views.nuevoTipoItem' %}">Agregar TipoItem</a></li>
                         <li><a href="{% url 'demo_app.AdminTipoItem.views.tipoitem' %}">Listar TipoItem</a></li>
                         <li><a href="{% url 'demo_app.AdminItem.views.listar_items' %}">Listar Item</a></li>
+                       {% endif %}
                     </ul>
                 </li>
+                {% if user.is_superuser or user.is_staff %}
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestion de Cambios<b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -57,7 +71,9 @@
                     </ul>
                 </li>
 
-                </li>
+
+
+
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Relacion<b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -67,7 +83,7 @@
                 </li>
 
 
-                </li>
+
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Atributo Item<b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -75,12 +91,13 @@
                         <li><a href="{% url 'demo_app.AdminAtributosItem.views.nuevoatributoitem' %}">Nuevo Atributo Item</a></li>
                     </ul>
                 </li>
-
+                                {% endif %}
             </ul>
             <div>
                 <a>Logged as: {{ user.username }} </a> -
                 <a href="{% url 'demo_app.AdminUsuarios.views.cerrar' %}">Logout</a>
             </div>
+        {% endif %}
         </div>
 
     </div>
