--- a/demo_project/demo_app/templates/HtmlProyecto/miproyecto.html
+++ b/demo_project/demo_app/templates/HtmlProyecto/miproyecto.html
@@ -19,7 +19,7 @@
 
         <table class="table table-bordered table-striped" style="width: 500px">
 
-            <tr><th style="width: 180px" class="navbar-inner">Leader: </th><td>{{ proyecto.user.username }}</td></tr>
+            <tr><th style="width: 180px" class="navbar-inner">Leader: </th><td style="text-align: center">{{ proyecto.leader.username }}</td></tr>
             <tr><th class=  "navbar-inner">Nombre: </th><td  style="text-align: center">{{ proyecto.nombre }}</td></tr>
             <tr><th class="navbar-inner">Fecha de Creacion: </th><td style="text-align: center">{{ proyecto.nombre }}</td></tr>
             <tr><th class="navbar-inner">Complejidad: </th><td style="text-align: center">{{ proyecto.complejidad }}</td></tr>
