--- a/demo_project/demo_app/templates/HtmlRoles/verrol.html
+++ b/demo_project/demo_app/templates/HtmlRoles/verrol.html
@@ -1,44 +1,21 @@
 {% extends 'base.html' %}
 {% load bootstrap_toolkit %}
-{% block titulo %}{{ modo }} Rol{% endblock %}
+{% block titulo %}Ver Rol{% endblock %}
 {% block extra_head %}
-<script type="text/javascript">
-    function marcar(source)
-    {
-        checkboxes=document.getElementsByTagName('input'); //obtenemos todos los controles del tipo Input
-        for(i=0;i<checkboxes.length;i++) //recoremos todos los controles
-        {
 
-            if(checkboxes[i].type == "checkbox") //solo si es un checkbox entramos
-            {
-                checkboxes[i].checked=source.checked; //si es un checkbox le damos el valor del checkbox que lo llamó (Marcar/Desmarcar Todos)
-            }
-        }
-    }
-
-</script>
 {% endblock %}
 {% block content %}
-    {% if rol_ya %}
-<center>
-<div style="width: 300px"    class="alert alert-warning alert-dismissable">
-  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-  <strong>Alerta!</strong> Ya existe un rol con ese nombre!
-</div>
-</center>
-    {% endif %}
-    <center><h1>{{ modo }} Rol</h1></center>
+
+    <center><h1>Ver Rol</h1></center>
     <br>
     <center>
 
 	<form id='formulario' method='post' action=''>{% csrf_token %}
-            {#		<table>{{formulario}}</table>#}
-
 
         <table>
             <tr>
                 <th>Nombre: </th>
-                <td><input type="text" required="" disabled value="{{ rol.nombre }}" name="rol_name" width="100px"></td>
+                <td><input type="text" required="" disabled  value="{{ rol.nombre }}" name="rol_name" width="100px"></td>
             </tr>
             <tr>
                 <th>Descripcion: </th>
@@ -54,7 +31,7 @@
                  </tr>
                   <tr>
 
-                 <td>Marcar/Desmarcar Todos: <input type="checkbox" disabled onclick="marcar(this);" /> </td>
+                 <td>Marcar/Desmarcar Todos: <input type="checkbox" onclick="marcar(this);" /> </td>
                  </tr>
              </table>
 
@@ -64,128 +41,36 @@
 
         <table class="table-bordered ">
             <tr>
-                <td style="width: 200px; height: 100px" rowspan="5" class="navbar-inner"><center><b>PROYECTO</b></center>
+                <td style="width: 200px; height: 100px" rowspan="2" class="navbar-inner"><center><b>PROYECTO</b></center>
                     </b><p>El usuario tendra permiso sobre este proyecto</p>    </td>
+            </tr>
                 <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Proyecto</p></td>
-                    <td style="width: 50px"><center><input  type="checkbox" {% if permiso.add_project  %} checked {% endif %} disabled name="add_proyecto"></center></td>
-                </tr>
-                <tr>
-                   <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Proyecto</p></td>
-                    <td style="width: 50px"><center><input disabled type="checkbox" {% if permiso.edit_project  %} checked {% endif %} name="edit_proyecto"> </center></td>
-                </tr>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Eliminar Proyecto</p></td>
-                   <td style="width: 50px"><center><input disabled type="checkbox" {% if permiso.delete_project  %} checked {% endif %} name="delete_proyecto"></center></td>
-                </tr>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Consultar Proyecto</p></td>
-                   <td style="width: 50px"><center><input disabled type="checkbox" {% if permiso.consultar_project  %} checked {% endif %} name="consultar_proyecto"></center></td>
-                </tr>
+             <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.AdminProyecto  %} checked {% endif %} name="proyecto"> </center></td>
             </tr>
             <tr>
               <td style="width: 200px; height: 100px" rowspan="2" class="navbar-inner"><center><b>FASES</b></center>
-                    </b><p>El usuario Podra ver Fases</p>    </td>
+                    </b><p>El usuario Podra administrar Fases</p>    </td>
                 <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Ver Fases</p></td>
-                    <td style="width: 50px"><center><input disabled {% if permiso.ver_fase %} checked {% endif %} type="checkbox" name="ver_fase"></center></td>
+
+                    <td style="width: 50px"><center><input disabled {% if permiso.AdminFase %} checked {% endif %} type="checkbox" name="fase"></center></td>
                 </tr>
               </tr>
 
-             <tr>
+             <tr> <td style="width: 200px; height: 100px" class="navbar-inner"><center><b>ITEMS</b></center>
+                    </b><p>El usuario tendra permiso sobre items y tipo items de este proyecto</p>    </td>
+                    <td style="width: 50px" ><center><input type="checkbox" disabled {% if permiso.AdminItem  %} checked {% endif %} name="item"></center></td></tr>
 
-             <td style="width: 200px; height: 100px" rowspan="7" class="navbar-inner"><center><b>ITEMS</b></center>
-                    </b><p>El usuario tendra permiso sobre items de este proyecto</p>    </td>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Items</p></td>
-                    <td style="width: 50px"><center><input disabled {% if permiso.add_item  %} checked {% endif %} type="checkbox" name="add_item"></center></td>
-                </tr>
-                <tr>
-                   <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Items</p></td>
-                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.edit_item  %} checked {% endif %} name="edit_item"></center></td>
-                </tr>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Eliminar Items</p></td>
-                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.delete_item  %} checked {% endif %} name="delete_item"></center></td>
-                </tr>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Revivir Items</p></td>
-                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.revive_item  %} checked {% endif %} name="revive_item"></center></td>
-                </tr>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Consultar Items</p></td>
-                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.consultar_item  %} checked {% endif %} name="consultar_item"></center></td>
-                </tr>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Relacionar Items</p></td>
-                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.relacionar_item  %} checked {% endif %} name="relacionar_item"></center></td>
-                </tr>
-              </tr>
-              <tr>
-              <td style="width: 200px; height: 100px" rowspan="4" class="navbar-inner"><center><b>TIPO DE ITEMS</b></center>
-                    </b><p>El usuario Podra Administrar Tipos de Items</p>    </td>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Tipo de Item</p></td>
-                    <td style="width: 50px"><center><input type="checkbox"  disabled {% if permiso.add_tipo_item  %} checked {% endif %} name="add_tipo_item"></center></td>
-                </tr>
-                 <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Tipo de Item</p></td>
-                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.edit_tipo_item  %} checked {% endif %} name="edit_tipo_item"></center></td>
-                </tr>
-                 <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Eliminar Tipo de Item</p></td>
-                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.delete_tipo_item  %} checked {% endif %} name="delete_tipo_item"></center></td>
-                </tr>
-
-
-              </tr>
-
-        <td style="width: 200px; height: 100px" rowspan="7" class="navbar-inner"><center><b>ROLES</b></center>
+            <tr> <td style="width: 200px; height: 100px" rowspan="1" class="navbar-inner"><center><b>ROLES</b></center>
                     </b><p>El usuario podra administrar roles mediante estos permisos</p>    </td>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Roles</p></td>
-                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.add_rol  %} checked {% endif %} name="add_rol"></center></td>
-                </tr>
-                <tr>
-                   <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Roles</p></td>
-                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.edit_rol  %} checked {% endif %} name="edit_rol"></center></td>
-                </tr>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Eliminar Roles</p></td>
-                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.delete_rol  %} checked {% endif %} name="delete_rol"></center></td>
-                </tr>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Consultar Roles</p></td>
-                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.consultar_rol  %} checked {% endif %} name="consultar_rol"></center></td>
-                </tr>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Asignar Roles</p></td>
-                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.asignar_rol  %} checked {% endif %} name="asignar_rol"></center></td>
-                </tr>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Desasignar Roles</p></td>
-                   <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.desasignar_rol  %} checked {% endif %} name="desasignar_rol"></center></td>
-                </tr>
+                <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.AdminRol  %} checked {% endif %} name="rol"></center></td></tr>
 
 
               </tr>
-                <td style="width: 200px; height: 100px" rowspan="5" class="navbar-inner"><center><b>Usuarios</b></center>
-                    </b><p>El usuario tendra permiso para Administrar Usuarios</p>    </td>
-                <tr>
-                    <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Crear Usuarios</p></td>
-                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.add_user  %} checked {% endif %} name="add_user"></center></td>
-                </tr>
-                <tr>
-                   <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Modificar Usuarios</p></td>
-                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.edit_user  %} checked {% endif %} name="edit_user"></center></td>
-                </tr>
-                <tr>
-                   <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Desactivar Usuarios</p></td>
-                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.delete_user  %} checked {% endif %} name="delete_user"></center></td>
-                </tr>
+                <td style="width: 200px; height: 100px" rowspan="2" class="navbar-inner"><center><b>Usuarios</b></center>
+                    </b><p>El usuario tendra permiso para Administrar Usuarios dentro de un proyecto</p>    </td>
+
              <tr>
-                   <td style="width: 200px; border: 3px"><p style=" margin-left: 30px;">Consultar Usuarios</p></td>
-                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.consultar_user  %} checked {% endif %} name="consultar_user"></center></td>
+                    <td style="width: 50px"><center><input type="checkbox" disabled {% if permiso.AdminUser  %} checked {% endif %} name="user"></center></td>
                 </tr>
             </tr>
 
@@ -195,7 +80,7 @@
         </div>
     </div>
         <br>
-         		<input class="btn btn-info" type='submit' value='Volver'/>
+         		<input class="btn btn-info" type='submit' value='Guardar'/>
 	</form>
     </center>
 
