--- a/demo_project/demo_app/templates/HtmlProyecto/miproyecto.html
+++ b/demo_project/demo_app/templates/HtmlProyecto/miproyecto.html
@@ -13,6 +13,7 @@
    <li><a href="{% url 'demo_app.AdminRoles.views.roles' id_proyecto %}">Roles</a></li>
 </ul>
 
+    <a class="btn btn-info" href="{% url 'demo_app.AdminLineaBase.views.listar_lb' id_proyecto %}">Listar Lineas Base</a>
     <center>
         <h1>Proyecto: {{ proyecto.nombre }}</h1>
 
