--- a/demo_project/demo_app/templates/HtmlProyecto/miproyecto.html
+++ b/demo_project/demo_app/templates/HtmlProyecto/miproyecto.html
@@ -14,6 +14,7 @@
 </ul>
 
     <a class="btn btn-info" href="{% url 'demo_app.AdminLineaBase.views.listar_lb' id_proyecto %}">Listar Lineas Base</a>
+    <a class="btn btn-info" href="{% url 'demo_app.AdminLineaBase.views.nuevo_lb' id_proyecto %}">Nueva Linea Base</a>
     <center>
         <h1>Proyecto: {{ proyecto.nombre }}</h1>
 
