--- a/demo_project/demo_app/templates/HtmlLineaBase/items.html
+++ b/demo_project/demo_app/templates/HtmlLineaBase/items.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %}
     <br>
-    <center><h1>Linea Base: {{ lb.nombre }}</h1>
+    <center><h1>Linea Base: {{ lb.numero }}</h1>
     <h2>Proyecto: {{ lb.proyecto.nombre }}</h2>
     </center>
 
@@ -14,7 +14,7 @@
     <center>
     <a class="btn btn-info" style="margin-left: -300px" href="{% url 'demo_app.AdminLineaBase.views.listar_lb' lb.proyecto_id %}">Volver</a>
 	<form  method='post' action=''>{% csrf_token %}
-		<table class="table" style="width: 400px">
+		<table class="table" style="width: 600px">
             <tr>
             <th class="navbar-inner">Nombre</th>
             <th class="navbar-inner">Estado</th>
@@ -26,7 +26,11 @@
                 <td>{{ item.nombre }}</td>
                 <td>{{ item.estado }}</td>
                 <td>{{ item.fase.nombre }}</td>
-                <td>Editar</td>
+                <td>{% if item.linea_base_id == None %}
+                    <a href="{% url 'demo_app.AdminLineaBase.views.item_to_lb' item.id_item lb.id_linea_base %}">Agregar a LB</a></td>
+                    {% else %}
+                    <em>Agregado a linea base nro. {{ item.linea_base.numero }}</em>
+                    {% endif %}
             </tr>
             {% endfor %}
 		</table>
