--- a/demo_project/demo_app/templates/HtmlItem/add_lb.html
+++ b/demo_project/demo_app/templates/HtmlItem/add_lb.html
@@ -18,7 +18,7 @@
     <tr><td><label>Linea Base:</label>
         <select name="lb" >
         {% for l in lbs %}
-            <option value="{{ l.id_linea_base }}"> {{ l.nombre }}</option>
+            <option value="{{ l.id_linea_base }}"> {{ l.numero }}</option>
         {% endfor  %}
        </select></td></tr>
     </table>
