--- a/demo_project/demo_app/templates/HtmlProyecto/colaboradores.html
+++ b/demo_project/demo_app/templates/HtmlProyecto/colaboradores.html
@@ -11,6 +11,9 @@
   <li><a href="{% url 'demo_app.AdminFases.views.fases_proyecto' id_proyecto %}">Fases</a></li>
     <li class="active"><a href="{% url 'demo_app.AdminProyectos.views.colaboradores' id_proyecto %}" >Colaboradores</a></li>
    <li ><a href="{% url 'demo_app.AdminRoles.views.roles' id_proyecto %}">Roles</a></li>
+<li><a href="{% url 'demo_app.AdminItem.views.item_proyecto' id_proyecto %}">Items</a></li>
+<li ><a href="{% url 'demo_app.AdminRelacion.views.relacion_proyecto' id_proyecto %}">Relaciones</a></li>
+
 </ul>
 
 <br><br>
