--- a/demo_project/demo_app/templates/HtmlTipoItem/tipo_item_to_item.html
+++ b/demo_project/demo_app/templates/HtmlTipoItem/tipo_item_to_item.html
@@ -47,7 +47,9 @@
         <td>{{dato.estado}}</td>
      <td>{{dato.tipo_item.fase.nombre}}</td>
     <td style="width: 300px"><a href="{% url 'demo_app.AdminItem.views.TipoItem_editar_item' dato.id_item %}">Editar</a>
-    - <a href="{% url 'demo_app.AdminRelacion.views.padre_hijo' dato.id_item %}">Relacionar</a>
+    {% if dato.estado  == estado_iniciado %}
+       - <a href="{% url 'demo_app.AdminRelacion.views.padre_hijo' dato.id_item %}">Relacionar</a>
+        {% endif %}
         - <a href="{% url 'demo_app.AdminAtributosItem.views.atributos_por_item' dato.id_item %}">Ver Atributos</a>
         {% if estado_item == dato.estado %}
            -  <a href="{% url 'demo_app.AdminItem.views.aprobar' dato.id_item %}">Aprobar</a>
