--- a/demo_project/demo_app/templates/HtmlFases/fasesproyecto.html
+++ b/demo_project/demo_app/templates/HtmlFases/fasesproyecto.html
@@ -19,9 +19,13 @@ open(url,'','top=300,left=300,width=300,height=300') ;
   <li class="active"><a href="{% url 'demo_app.AdminFases.views.fases_proyecto' id_proyecto %}">Fases</a></li>
     <li ><a href="{% url 'demo_app.AdminProyectos.views.colaboradores' id_proyecto %}" >Colaboradores</a></li>
    <li ><a href="{% url 'demo_app.AdminRoles.views.roles' id_proyecto %}">Roles</a></li>
-
+<li><a href="{% url 'demo_app.AdminItem.views.item_proyecto' id_proyecto %}">Items</a></li>
+<li ><a href="{% url 'demo_app.AdminRelacion.views.relacion_proyecto' id_proyecto %}">Relaciones</a></li>
 
 </ul>
+
+
+
 <br><br>
  <table class=" table-bordered table-condensed" >
     <tr>
