--- a/demo_project/demo_app/templates/HtmlAtributoItem/editaratributoitem.html
+++ b/demo_project/demo_app/templates/HtmlAtributoItem/editaratributoitem.html
@@ -19,7 +19,7 @@
         <label>Valor Defecto: </label>
         <input type="text" maxlength="50" required="" value="{{ atributo.valor_defecto }}" name="valor_defecto"/>
          <label>Item: </label>
-        <input type="text" maxlength="50" required="" disabled value="{{ item.nombre }}" name="valor_defecto"/>
+        <input type="text" maxlength="50" required="" disabled value="{{ item.nombre }}" />
 
         <br>
 		<input class="btn btn-info" type='submit' value='Actualizar'/>
