--- a/demo_project/demo_app/templates/HtmlItem/finalizar.html
+++ b/demo_project/demo_app/templates/HtmlItem/finalizar.html
@@ -6,18 +6,16 @@
 {% endblock %}
 {% block content %}
     <br>
-    <center><h1>Revivir Item</h1></center>
+    <center><h1>Finalizar Item</h1></center>
     <br><br>
     <center>
-    <p>Esta seguro que desea Revivir el  Item {{ item.nombre }}<p>
+    <p>Esta seguro que desea Finalizar el  Item {{ item.nombre }}<p>
         </center>
     <center>
 
 	<form  method='post' action=''>{% csrf_token %}
-
-
-		<input class="btn btn-info" type='submit' name="revivir" value='si'/>
-        <input class="btn btn-info" type='submit' name="revivir" value='no'/>
+		<input class="btn btn-info" type='submit' name="fin" value='si'/>
+        <input class="btn btn-info" type='submit' name="fin" value='no'/>
 	</form>
     </center>
 {% endblock %}
