--- a/demo_project/demo_app/templates/HtmlItem/historial.html
+++ b/demo_project/demo_app/templates/HtmlItem/historial.html
@@ -8,8 +8,12 @@
 {% endblock %}
 <body >
 {% block content %}
+
+
+
     <center><H2>Historial</H2></center>
    <table>
+<td><a  class="btn btn-info" href="{% url 'demo_app.AdminItem.views.item_proyecto' id_proyecto %}">Volver</a></td>
    <td style="width: 70%;margin-right: 0px; margin-left: 100%; ">
         {{ lines|pagination }}
    </td>
