--- a/demo_project/demo_app/templates/HtmlProyecto/colaboradores.html
+++ b/demo_project/demo_app/templates/HtmlProyecto/colaboradores.html
@@ -13,6 +13,7 @@
    <li ><a href="{% url 'demo_app.AdminRoles.views.roles' id_proyecto %}">Roles</a></li>
 <li><a href="{% url 'demo_app.AdminItem.views.item_proyecto' id_proyecto %}">Items</a></li>
 <li ><a href="{% url 'demo_app.AdminRelacion.views.relacion_proyecto' id_proyecto %}">Relaciones</a></li>
+<li ><a href="{% url 'demo_app.AdminComite.views.ver_comite' id_proyecto %}">Comite</a></li>
 
 </ul>
 
