--- a/templates/HtmlProyecto/miproyecto.html
+++ b/templates/HtmlProyecto/miproyecto.html
@@ -4,14 +4,22 @@
 {% block header %}
  {{ proyecto.nombre }}
 {% endblock %}
+<body onload="iniciar()">
 {% block content %}
+<script>
+$('#id_nombre').attr('required','true')
+$('#id_descripcion').attr('required','true')
 
+
+</script>
 <center>
 <ul class="nav nav-tabs">
   <li class="active"><a href="{% url 'AdminProyectos.views.mi_proyecto' id_proyecto %}">Mi Proyecto</a></li>
  <li><a href="{% url 'AdminFases.views.fases_proyecto' id_proyecto %}">Fases</a></li>
-  <li ><a href="{% url 'AdminProyectos.views.colaboradores' id_proyecto %}" >Colaboradores</a></li>
-   {% comment %}  
+  
+  <li ><a href="{% url 'AdminTipoItem.views.tipoitem_proyecto' proyecto.id %}">Tipos Item</a></li>
+   {% comment %}
+   <li ><a href="{% url 'AdminProyectos.views.colaboradores' id_proyecto %}" >Colaboradores</a></li>  
    <li><a href="{% url 'AdminRoles.views.roles' id_proyecto %}">Roles</a></li>
 <li><a href="{% url 'AdminItem.views.item_proyecto' id_proyecto %}">Items</a></li>
 <li ><a href="{% url 'AdminRelacion.views.relacion_proyecto' id_proyecto %}">Relaciones</a></li>
@@ -41,6 +49,7 @@
 
             <tr><th style="width: 180px" class="navbar-inner">Leader: </th><td style="text-align: center">{{ proyecto.leader.username }}</td></tr>
             <tr><th class=  "navbar-inner">Nombre: </th><td  style="text-align: center">{{ proyecto.nombre }}</td></tr>
+            <tr><th class="navbar-inner">Estado: </th><td style="text-align: center">{{ proyecto.get_estado_display }}</td></tr>
             <tr><th class="navbar-inner">Fecha de Creacion: </th><td style="text-align: center">{{ proyecto.fecha_creacion }}</td></tr>
             <tr><th class="navbar-inner">Complejidad: </th><td style="text-align: center">{{ proyecto.complejidad }}</td></tr>
             <tr><th class="navbar-inner">Nro. Fases: </th><td style="text-align: center">{{ proyecto.nro_fases }}</td></tr>
@@ -56,7 +65,7 @@
     <form method="post">{% csrf_token %}
     
 	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1"  style="top: 5%" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal fade" id="myModal"   style="top: 5%" role="dialog"  data-backdrop="static" data-keyboard="false" aria-labelledby="myModalLabel" aria-hidden="false">
 	  <div class="modal-dialog">
 	    <div class="modal-content">
 	      <div class="modal-header">
@@ -65,7 +74,8 @@
 	      </div>
 	      <div class="modal-body">
 	         	<table class="table-striped">
-	         	{{ formulario.as_table}}
+	         	
+	         	{{ formulario.as_table }}
 	         	</table>
 	      </div>
 	      <div class="modal-footer">
@@ -96,3 +106,4 @@
 	  </div>
 	</div>
 {% endblock %}
+</body>
